# University-Work

./: .gitignore  Books.md  README.md
( 1 ) first Year/first semester/: Readme.md
( 1 ) first Year/first semester/Algebra/: readme.md
( 1 ) first Year/first semester/Discrete Structures/: Readme.md
( 1 ) first Year/first semester/Introduction to Programming/: 1MI0800469_2_1.cpp  1MI0800469_2_2.cpp  Readme.md
( 1 ) first Year/second semester/: Readme.md
( 2 ) second Year/( 3 )  Third semester/: Readme.md
( 2 ) second Year/( 3 )  Third semester/CAGD/: .~lock.Документация.odt#  Algorithms.js  Interface.js  index.html  styles.css  Документация.odt
( 2 ) second Year/( 3 )  Third semester/Data structures/: Readme.md
( 2 ) second Year/( 3 )  Third semester/Functional programming/: 2.rkt  Readme.md
( 2 ) second Year/( 4 )  Fourth Semester/: .Readme.md.swp  Readme.md  someNotes.txt
( 2 ) second Year/( 4 )  Fourth Semester/Algebra 2/: .Readme.md.swp  (+2 more)
( 3 ) third Year/( 5 ) Fifth semester/: Readme.md  electiveSubjects.txt
( 3 ) third Year/( 5 ) Fifth semester/Network programming/Project/: .~lock.Documentation.odt#  BMP_Manipulation.hpp  Base_connections.hpp  CLI.hpp  CMakeLists.txt  connection_client.hpp  files.hpp  input.ppm  main.cpp
( 3 ) third Year/( 5 ) Fifth semester/Network programming/Project/ImageProcessing/: Algorithms.hpp  BMP_File.hpp  BMP_Manipulation.hpp
( 3 ) third Year/( 5 ) Fifth semester/Network programming/Project/server/: connection_server.hpp  main.cpp
first Year/first semester/: Readme.md
second Year/(3) Third semester/: Readme.md
(+1257 files in other folders)
